--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
     <h1>{{ pageTitle }}</h1>
-    <p><a href="/">Home</a></p>
-    <p><a href="/maintenance">Maintenance</a></p>
-    <p><a href="/about">About</a></p>
+    <div><a href="/">Home</a></div>
+    <div><a href="/project">Project</a></div>
+    <div><a href="/about">About</a></div>
 </header>
